# cookiecutter-model

./: .gitignore  README.rst  build.sh  cookiecutter.json  cookiecutter.yaml  local_extensions.py
hooks/: post_gen_project.py
{{cookiecutter.model_name}}/: build.sh  compile.sh  custom_fields.yaml  expandable_fields.yaml  files.yaml  install.sh  metadata.yaml  model.yaml  model_app.yaml  model_metadata.yaml  requests.yaml
{{cookiecutter.model_name}}/{{cookiecutter.model_name}}-model-builder/: setup.cfg
{{cookiecutter.model_name}}/{{cookiecutter.model_name}}-ui/: setup.cfg
