

[metadata]
name = {{cookiecutter.model_name}}-model-builder
version = attr:{{cookiecutter.model_package}}_model_builder.version.__version__
description = Model builder plugin containing model definition of {{cookiecutter.model_name}}
authors =
long_description = file: README.md
long_description_content_type = text/markdown


[options]
python = >=3.9
install_requires =
    oarepo-model-builder

[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2


[options.entry_points]
oarepo_ui =
oarepo.models =
    {{cookiecutter.model_name}} = {{cookiecutter.model_package}}_model_builder.models:model.yaml

