

[metadata]
name = {{cookiecutter.model_name}}-ui
version = attr:{{cookiecutter.model_package}}_ui.version.__version__
description = UI components for {{cookiecutter.model_name}}
authors =


[options]
python = >=3.9
install_requires =
    oarepo-ui


[options.package_data]
* = *.json, *.rst, *.md, *.json5, *.jinja2

[options.entry_points]
oarepo_ui =
